# debian-pkg-sugar-presence

./: .gitignore  Makefile.am  Makefile.in  NEWS  aclocal.m4  autogen.sh  configure  configure.ac
debian/: README.source  changelog  control  control.in  copyright  copyright_hints  rules  watch
src/: .gitignore  Makefile.am  Makefile.in  activity.py  buddy.py  buddyiconcache.py  config.py  linklocal_plugin.py  main.py  presenceservice.py  pstest.py  psutils.py  server_plugin.py  sugar-presence-service  sugar-presence-service.in  telepathy_plugin.py
