AC_INIT([Sugar Presence Service],[0.83.2],[],[sugar-presence-service])

AC_PREREQ([2.59])

AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_SRCDIR([src/sugar-presence-service.in])

AM_INIT_AUTOMAKE([1.9 foreign dist-bzip2 no-dist-gzip])

AM_PATH_PYTHON

AC_CONFIG_FILES([
    src/sugar-presence-service
    src/config.py
])

AC_CONFIG_FILES([
    Makefile
    src/Makefile
])

AC_OUTPUT
